<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    tools:parentTag="android.widget.LinearLayout">
    <LinearLayout
        android:id="@+id/ll_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_key_view"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <com.magicianguo.menukey.view.OrderItemView
            android:id="@+id/order_back"
            style="@style/OrderItem"
            app:img_src="@mipmap/ic_back"
            app:order_type="1" />
        <com.magicianguo.menukey.view.OrderItemView
            android:id="@+id/order_home"
            style="@style/OrderItem"
            app:img_src="@mipmap/ic_home"
            app:order_type="2" />
        <com.magicianguo.menukey.view.OrderItemView
            android:id="@+id/order_recent"
            style="@style/OrderItem"
            app:img_src="@mipmap/ic_recent"
            app:order_type="3" />
        <com.magicianguo.menukey.view.OrderItemView
            android:id="@+id/order_menu"
            style="@style/OrderItem"
            app:img_src="@mipmap/ic_menu"
            app:order_type="4" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/save_txt"
        android:padding="0dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_txt"
        android:padding="0dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_txt"
        android:visibility="visible"
        tools:visibility="gone" />
</merge>